fix nav link hover causing scrollbar

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -5,9 +5,12 @@
     padding: 20px;
     color: white;
     background: linear-gradient(to bottom, #ff4b4b, #d40000);
+    overflow: hidden;
 }
 
 .nav-link {
+    position: relative;
+    display: inline-block;
     text-decoration: none;
     font-size: 18px;
     color: white;
